Enable Preview
Signed-off-by: Lionel <Lionel@DESKTOP-F0JBOLJ.home>
Change-Id: I7a49fc797ba427b7c485549a8260abca97797cd1