@@ -17,6 +17,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>21</release>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
 				</configuration>
 				<version>3.11.0</version>
 			</plugin>
@@ -24,6 +27,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
+		        <configuration>
+		            <argLine>--enable-preview</argLine>
+		        </configuration>
 			</plugin>
 		</plugins>
 	</build>
